# QLayer

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  build_week.md  development.md  privacy.md  roadmap.md  testing.md
docs/plans/: 2026-07-18-chat-destination-selector-design.md  2026-07-18-chat-destination-selector-implementation.md  2026-07-18-compact-toolbox-ui-design.md  2026-07-18-compact-toolbox-ui-implementation.md  2026-07-18-manual-chat-disclosure-design.md  2026-07-18-manual-chat-disclosure-implementation.md  2026-07-19-add-chat-subview.md  (+13 more)
scripts/: package-portable.ps1
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  voice-selector.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  chat_discovery.rs  codex_runtime.rs  codex_threads.rs  global_hotkeys.rs  keyboard.rs  main.rs  modifier_hotkey.rs  project_actions.rs  project_identity.rs  tray.rs  voice_selector.rs  window_behavior.rs  window_focus.rs  window_placement.rs
src-tauri/src/localhost_manager/: classification.rs  mod.rs  models.rs  process_info.rs  windows_discovery.rs
src-tauri/src/localhost_manager/project_resolution/: alias_store.rs  fingerprint.rs  manifest_reader.rs  mod.rs  path_candidates.rs  process_tree.rs  project_roots.rs
(+129 files in other folders)
