[package]
name = "qolayer"
version = "0.1.0"
description = "Quality-of-life tools for coding assistant apps."
authors = ["QoLayer contributors"]
license = "AGPL-3.0-only"
repository = "https://github.com/qolayer/qolayer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
