[package]
name = "qolayer"
version = "0.1.0"
description = "Quality-of-life tools for coding assistant apps."
authors = ["QoLayer contributors"]
license = "AGPL-3.0-only"
repository = "https://github.com/qolayer/qolayer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
